--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="yy.yjbo.showdialogfragment.ShowFragmentActivity"/>
+        <activity android:name=".showdialogfragment.ShowFragmentActivity"/>
     </application>
 
 </manifest>
